# bluedevil

./: CMakeLists.txt
bluedevil/: CMakeLists.txt  bluedeviladapter.cpp  bluedevildevice.cpp  bluedevilmanager_p.cpp
bluedevil/test/: CMakeLists.txt  bluedeviltest.cpp
cmake/modules/: Qt4Macros.cmake
src/daemon/kded/: BlueDevilDaemon.cpp  BlueDevilDaemon.h  bluezagent.h
src/kcmodule/: CMakeLists.txt
src/kio/obexftp/: CMakeLists.txt  obexdtypes.h
src/monolithic/: monolithic.cpp
